--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     Ginza is a arty-fartsy district in Tokyo with a lot of
                     high-class markets. The image above is from the Art Aquarium
                     in Ginza, however there are many modern galleries there and
-                    it is one of the most elegant and lucurious streets in the
+                    it is one of the most elegant and luxurious streets in the
                     world.
                 </p>
                 <a
