added Senso-Ji temple

--- a/index.html
+++ b/index.html
@@ -204,6 +204,22 @@
             </div>
         </div>
 
+        <div class="card">
+            <img src="./img/unnamed.jpg" alt="Image 2" />
+            <div class="card-content">
+                <p>
+                    Senso-Ji temple. An ancient Buddhist temple located in
+                    Asakusa, Tokyo, Japan. It is Tokyo's oldest temple, and one
+                    of its most significant.
+                </p>
+                <a
+                    href="https://www.japan-guide.com/e/e3001.html"
+                    class="card-link"
+                    >Read More</a
+                >
+            </div>
+        </div>
+
         <div class="card-header"><h1>In Kyoto</h1></div>
         <div class="card" style="background-color: rgb(181, 255, 230)">
             <img src="./img/181960771.jpg" alt="Image 2" />
